version 0.009; 2011-04-28

  * in XS, use PERL_NO_GET_CONTEXT for efficiency

  * in XS, declare "PROTOTYPES: DISABLE" to prevent automatic generation
    of unintended prototypes

  * jump through hoops to avoid compiler warnings

  * use full stricture in test suite

  * in Build.PL, complete declaration of configure-time requirements

  * slightly reformat some Perl and C code to avoid exceeding 80 columns

  * include META.json in distribution

  * add MYMETA.json and MYMETA.yml to .cvsignore

version 0.008; 2010-03-11

  * bugfix: avoid memory leak when returning block to Perl space

  * check for required Perl version at runtime

  * in XS, avoid using "class" as a variable name, for compatibility
    with C++ compilers

  * in Build.PL, explicitly declare configure-time requirements

  * remove bogus "exit 0" from Build.PL

version 0.007; 2009-04-22

  * in XS code, use the correct "PREINIT:" instead of "INIT:" to introduce
    variable declarations

  * test Uklblowfish with long keys

version 0.006; 2009-04-21

  * in C::E::Family, new method "as_class" to work around Crypt::CBC
    brain damage

  * use simpler "parent" pragma in place of "base"

  * in documentation, use the term "truth value" instead of the less
    precise "boolean"

  * drop prototypes from method subs (where the prototypes have no effect)

  * in C::E::Family, abandon use of the "fields" module

  * add casts for pointer target signedness to avoid compiler warnings

  * use full stricture in Build.PL

version 0.005; 2008-04-06

  * bugfix: when UTF8-decoding salt, don't attempt to read freed copy

  * don't rely on typemap handling of AV* arguments, because it's broken
    on perl 5.6

  * add backward-compatibility definition of bytes_from_utf8() function

  * avoid calling XSLoader::load() redundantly, which was causing
    redefinition warnings on older versions of XSLoader

version 0.004; 2008-04-02

  * add backward-compatibility definition of Newx() macro
